IALERT-3979: Issue tracker reliability and various notification fixes (#2805)
* IALERT-4053: Add edge case handling for orphaned job mappings. Added test coverage and fixed formatting.

* IALERT-4054: Issue tracker logging improvements (#2792)

* IALERT-4054: Add logging when mapping notifications to jobs, or when no job mappings are found

* IALERT-4054: Clean up Jira Server issue tracker comments to include easy to track ID messages. Add missing exception logging when transitioning issues.

* IALERT-4054: Include Jira Server logging changes in Jira Cloud classes

* IALERT-4054: Improve log messages when creating Black Duck issue callback events

* IALERT-4054: Add several missing id's, fix formatting

* IALERT-4054: Add debug check to reduce wasted cycles for users who are not logging at the DEBUG level

* IALERT-4057: Fix audit failure handling for issue trackers (#2795)

* IALERT-4057: Throw errors when Jira Cloud fails to process issue tracker messages, allowing them to be picked up by the Audit Failed table

* IALERT-4057: Throw errors when Jira Server fails to process issue tracker messages, allowing them to be picked up by the Audit Failed table

* IALERT-4057: Add comment to explain double logging concerns when re-throwing errors for AuditFailedEvents.

* IALERT-4057: Add additional error handling to JobSubTaskEventHandler ensuring unexpected errors are correctly handled by the ExecutingJobManager and logged

* IALERT-4057: Fix logger initialization

* IALERT-4064: Bug: Add protections to prevent DB constraint issues if attempting to save a notification that already exists by content ID (#2799)

* IALERT-4064: Verify and remove duplicate notifications if they exist in the same batch

* IALERT-4064: Add native query to handle persisting notifications while ignoring conflicts. Update changelog and init files to manually handle notification ID sequence.

* IALERT-4064: Cleanup duplicates in tests

* IALERT-4064: Change data type to remove linked list overhead
