@@ -8,8 +8,9 @@
 package com.blackduck.integration.alert.database.job.api;
 
 import java.time.OffsetDateTime;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.LinkedList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -68,28 +69,67 @@ public class DefaultNotificationAccessor implements NotificationAccessor {
     @Override
     @Transactional(propagation = Propagation.REQUIRED)
     public List<AlertNotificationModel> saveAllNotifications(Collection<AlertNotificationModel> notifications) {
-        List<NotificationEntity> entitiesToSave = new LinkedList<>();
+        if (notifications.isEmpty()) {
+            return List.of();
+        }
 
+        // Prefetch all content IDs in a batch to determine if duplicates exist when performing in-memory filtering.
+        Set<String> allBatchContentIds = notifications.stream()
+            .map(AlertNotificationModel::getContentId)
+            .collect(Collectors.toSet());
+        Set<String> existingContentIds = notificationContentRepository.findByContentIdIn(allBatchContentIds)
+            .stream()
+            .map(NotificationEntity::getContentId)
+            .collect(Collectors.toSet());
+
+        List<NotificationEntity> entitiesToSave = new ArrayList<>();
+        Set<String> contentIdsToSave = new HashSet<>();
         for (AlertNotificationModel model : notifications) {
-            if (notificationContentRepository.existsByContentId(model.getContentId())) {
+            if (existingContentIds.contains(model.getContentId())) {
                 logger.info("Notification already exists for provider: {} contentId: {}", model.getProviderConfigId(), model.getContentId());
+                logger.debug("Content: {}", model.getContent());
+            } else if (!contentIdsToSave.add(model.getContentId())) {
+                logger.info("Duplicate notification in batch for provider: {}, contentId: {}", model.getProviderConfigId(), model.getContentId());
                 logger.debug("Content: {}", model.getContent());
             } else {
                 entitiesToSave.add(fromModel(model));
             }
         }
 
-        return notificationContentRepository.saveAllAndFlush(entitiesToSave)
+        List<String> savedContentIds = new ArrayList<>();
+        for (NotificationEntity entity : entitiesToSave) {
+            int inserted = notificationContentRepository.saveIgnoreContentIdConflict(
+                entity.getCreatedAt(),
+                entity.getProvider(),
+                entity.getProviderConfigId(),
+                entity.getProviderCreationTime(),
+                entity.getNotificationType(),
+                entity.getContent(),
+                entity.getProcessed(),
+                entity.getContentId(),
+                entity.isMappingToJobs()
+            );
+            if (inserted > 0) {
+                savedContentIds.add(entity.getContentId());
+            }
+        }
+
+        if (savedContentIds.isEmpty()) {
+            return List.of();
+        }
+        // Native query insert bypasses Hibernate's identity management. As a result, the in-memory NotificationEntities do not have their ID populated.
+        // Only content IDs actually inserted by this transaction are fetched.
+        return notificationContentRepository.findByContentIdIn(savedContentIds)
             .stream()
             .map(this::toModel)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
     @Transactional(propagation = Propagation.REQUIRED)
     public List<AlertNotificationModel> saveAllNotificationsInBatch(final UUID batchId, final Collection<AlertNotificationModel> notifications) {
         List<AlertNotificationModel> models = saveAllNotifications(notifications);
-        if(!models.isEmpty()) {
+        if (!models.isEmpty()) {
             List<NotificationBatchEntity> batchDataList = models.stream()
                 .map(notification -> new NotificationBatchEntity(notification.getProviderConfigId(), batchId, notification.getId()))
                 .toList();
@@ -186,10 +226,10 @@ public class DefaultNotificationAccessor implements NotificationAccessor {
         String sortingField = "createdAt";
         // We can only modify the query for the fields that exist in NotificationContent
         if (StringUtils.isNotBlank(sortField) && "createdAt".equalsIgnoreCase(sortField)
-                || "provider".equalsIgnoreCase(sortField)
-                || COLUMN_NAME_PROVIDER_CREATION_TIME.equalsIgnoreCase(sortField)
-                || "notificationType".equalsIgnoreCase(sortField)
-                || "content".equalsIgnoreCase(sortField)) {
+            || "provider".equalsIgnoreCase(sortField)
+            || COLUMN_NAME_PROVIDER_CREATION_TIME.equalsIgnoreCase(sortField)
+            || "notificationType".equalsIgnoreCase(sortField)
+            || "content".equalsIgnoreCase(sortField)) {
             sortingField = sortField;
             sortQuery = true;
         }
@@ -271,11 +311,11 @@ public class DefaultNotificationAccessor implements NotificationAccessor {
         Sort.Order sortingOrder = Sort.Order.asc(COLUMN_NAME_PROVIDER_CREATION_TIME);
         PageRequest pageRequest = PageRequest.of(currentPage, pageSize, Sort.by(sortingOrder));
         Page<AlertNotificationModel> pageOfNotifications = notificationContentRepository.findNotMappedAndNotProcessedNotifications(
-                        providerConfigId,
-                        batchId,
-                        pageRequest
-                )
-                .map(this::toModel);
+                providerConfigId,
+                batchId,
+                pageRequest
+            )
+            .map(this::toModel);
         List<AlertNotificationModel> alertNotificationModels = pageOfNotifications.getContent();
         return new AlertPagedModel<>(pageOfNotifications.getTotalPages(), currentPage, pageSize, alertNotificationModels);
     }
@@ -284,9 +324,9 @@ public class DefaultNotificationAccessor implements NotificationAccessor {
     @Transactional
     public void setNotificationsMapping(List<AlertNotificationModel> notifications) {
         Set<Long> notificationIds = notifications
-                .stream()
-                .map(AlertNotificationModel::getId)
-                .collect(Collectors.toSet());
+            .stream()
+            .map(AlertNotificationModel::getId)
+            .collect(Collectors.toSet());
         setNotificationsMappingById(notificationIds);
     }
 
@@ -299,7 +339,7 @@ public class DefaultNotificationAccessor implements NotificationAccessor {
 
     @Override
     @Transactional(readOnly = true, isolation = Isolation.READ_COMMITTED)
-    public boolean hasMoreNotificationsToMap(long providerConfigId,  UUID batchId) {
+    public boolean hasMoreNotificationsToMap(long providerConfigId, UUID batchId) {
         return notificationContentRepository.existsByProviderConfigIdAndMappingToJobsFalse(providerConfigId, batchId);
     }
 
